force-app/main/default/objects/Transport_Job__c/Transport_Job__c.object-meta.xml
<CustomObject>
    <label>Transport Job</label>
    <nameField>
        <displayFormat>TJ-{0000000000}</displayFormat>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transport Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>