force-app/main/default/objects/Transport_Job__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No DSJ Required</fullName>
            </value>
            <value>
                <fullName>DSJ Required</fullName>
            </value>
            <value>
                <fullName>Fixed Price</fullName>
                <isActive>false</isActive>
                <label>Fixed Price</label>
            </value>
            <value>
                <fullName>Hourly Rates</fullName>
                <isActive>false</isActive>
                <label>Hourly Rates</label>
            </value>
            <value>
                <fullName>Km Rates</fullName>
                <isActive>false</isActive>
                <label>Km Rates</label>
            </value>
            <value>
                <fullName>Lump Sum (Rig Inclusive)</fullName>
                <isActive>false</isActive>
                <label>Lump Sum (Rig Inclusive)</label>
            </value>
            <value>
                <fullName>Maintenance</fullName>
                <isActive>false</isActive>
                <label>Maintenance</label>
            </value>
            <value>
                <fullName>Q.A. Price</fullName>
                <isActive>false</isActive>
                <label>Q.A. Price</label>
            </value>
            <value>
                <fullName>Quoted Price</fullName>
                <isActive>false</isActive>
                <label>Quoted Price</label>
            </value>
            <value>
                <fullName>WD Internal</fullName>
                <isActive>false</isActive>
                <label>WD Internal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>