force-app/main/default/objects/Transport_Job__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <description>Info from Site record</description>
    <formula>HYPERLINK(&apos;/&apos;+ Site__r.Account__c , Site__r.Account__r.Name, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client</label>
    <type>Text</type>
</CustomField>