force-app/main/default/objects/Transport_Job__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>Info from Site record</description>
    <formula>HYPERLINK(&apos;/&apos;+Site__r.Contract__c , Site__r.Contract__r.Name, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract</label>
    <type>Text</type>
</CustomField>