force-app/main/default/objects/Transport_Job__c/fields/Daily_Site_Job__c.field-meta.xml
<CustomField>
    <fullName>Daily_Site_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Site Job</label>
    <referenceTo>Daily_Report__c</referenceTo>
    <relationshipLabel>Transport Jobs</relationshipLabel>
    <relationshipName>Transport_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>