force-app/main/default/objects/Transport_Job__c/fields/DSJS_Status__c.field-meta.xml
<CustomField>
    <fullName>DSJS_Status__c</fullName>
    <formula>Daily_Site_Job__r.DSJS_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSJS Status</label>
    <type>Text</type>
</CustomField>