force-app/main/default/objects/Transport_Job__c/fields/Job_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Job Date</label>
    <type>Date</type>
</CustomField>