force-app/main/default/objects/Transport_Job__c/fields/Open_Driver_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Open_Driver_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If there is related Driver Assignment that is still open (i.e. Draft, Assigned, In Progress, Ready to Submit), then checkbox is ticked.</description>
    <label>Open Driver Assignment</label>
    <type>Checkbox</type>
</CustomField>