force-app/main/default/objects/Transport_Job__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <description>Info from Site record</description>
    <formula>Site__r.Purchase_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order #</label>
    <type>Text</type>
</CustomField>