force-app/main/default/objects/Transport_Job__c/fields/Resubmitted_to_DSJ__c.field-meta.xml
<CustomField>
    <fullName>Resubmitted_to_DSJ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resubmitted to DSJ</label>
    <type>Checkbox</type>
</CustomField>