force-app/main/default/objects/Transport_Job__c/fields/TJ_Description__c.field-meta.xml
<CustomField>
    <fullName>TJ_Description__c</fullName>
    <label>TJ Description</label>
    <type>TextArea</type>
</CustomField>