force-app/main/default/objects/Transport_Job__c/fields/Transport_Base__c.field-meta.xml
<CustomField>
    <fullName>Transport_Base__c</fullName>
    <label>Transport Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>