force-app/main/default/objects/Transport_Job__c/fields/Transport_Daily_Report__c.field-meta.xml
<CustomField>
    <fullName>Transport_Daily_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport Daily Report</label>
    <referenceTo>Transport_Daily_Report__c</referenceTo>
    <relationshipLabel>Transport Jobs</relationshipLabel>
    <relationshipName>Transport_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>