force-app/main/default/objects/Transport_Job__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Transport Jobs</relationshipLabel>
    <relationshipName>Transport_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>