force-app/main/default/objects/Transport_Job__c/fields/Unit_Manager__c.field-meta.xml
<CustomField>
    <fullName>Unit_Manager__c</fullName>
    <formula>Unit__r.Manager__r.FirstName&amp;&quot; &quot;&amp;Unit__r.Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Manager</label>
    <type>Text</type>
</CustomField>