force-app/main/default/objects/Transport_Job__c/fields/Within_100km_Radius__c.field-meta.xml
<CustomField>
    <fullName>Within_100km_Radius__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Within 100km Radius</label>
    <type>Checkbox</type>
</CustomField>