force-app/main/default/objects/Transport_Job__c/validationRules/Billable_NotEditable.validationRule-meta.xml
<ValidationRule>
    <fullName>Billable_NotEditable</fullName>
    <active>false</active>
    <description>Billable checkbox is not editable for non-Admin user.</description>
    <errorConditionFormula>AND(
   NOT(ISCHANGED(Category__c)),
   ISCHANGED(Billable__c),
   $Profile.Name != &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorDisplayField>Billable__c</errorDisplayField>
    <errorMessage>Billable checkbox is not editable.</errorMessage>
</ValidationRule>