force-app/main/default/objects/Transport_Job__c/validationRules/Category_NotRequired_Maintenance.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_NotRequired_Maintenance</fullName>
    <active>false</active>
    <description>The Category field is not required for Maintenance transport job.</description>
    <errorConditionFormula>AND(
    ISPICKVAL( Types__c , &apos;Maintenance&apos;),
    NOT(ISBLANK( TEXT(Category__c)) )
)</errorConditionFormula>
    <errorDisplayField>Category__c</errorDisplayField>
    <errorMessage>The Category field is not required for Maintenance transport job.</errorMessage>
</ValidationRule>