force-app/main/default/objects/Transport_Job__c/validationRules/Category_Required_Regular.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_Required_Regular</fullName>
    <active>false</active>
    <description>The Category field is required for regular transport job.</description>
    <errorConditionFormula>AND(
    ISPICKVAL( Types__c , &apos;Regular&apos;),
    ISBLANK( TEXT(Category__c) )
)</errorConditionFormula>
    <errorDisplayField>Category__c</errorDisplayField>
    <errorMessage>The Category field is required for Regular transport job.</errorMessage>
</ValidationRule>