force-app/main/default/objects/Transport_Job__c/listViews/All_Transport_Jobs.listView-meta.xml
<ListView>
    <fullName>All_Transport_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Job_Date__c</columns>
    <columns>Description__c</columns>
    <columns>Site__c</columns>
    <columns>Daily_Site_Job__c</columns>
    <columns>Unit__c</columns>
    <columns>Types__c</columns>
    <columns>Status__c</columns>
    <columns>Billable__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>Camp 8,Camp 9</value>
    </filters>
    <label>All Transport Jobs</label>
</ListView>