force-app/main/default/objects/Transport_Job__c/listViews/Camp_9.listView-meta.xml
<ListView>
    <fullName>Camp_9</fullName>
    <columns>NAME</columns>
    <columns>Job_Date__c</columns>
    <columns>Unit__c</columns>
    <columns>Description__c</columns>
    <columns>Site__c</columns>
    <columns>Billable__c</columns>
    <columns>Status__c</columns>
    <columns>Types__c</columns>
    <columns>Daily_Site_Job__c</columns>
    <columns>DSJS_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>Camp 9</value>
    </filters>
    <label>Camp 9</label>
</ListView>