force-app/main/default/objects/Transport_Job__c/listViews/Moomba_Transport_Jobs.listView-meta.xml
<ListView>
    <fullName>Moomba_Transport_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Job_Date__c</columns>
    <columns>Description__c</columns>
    <columns>Unit__c</columns>
    <columns>Site__c</columns>
    <columns>Billable__c</columns>
    <columns>Status__c</columns>
    <columns>Daily_Site_Job__c</columns>
    <columns>DSJS_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transport_Base__c</field>
        <operation>equals</operation>
        <value>Moomba</value>
    </filters>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>Camp 10</value>
    </filters>
    <label>Moomba - All</label>
</ListView>