force-app/main/default/objects/Transport_Job__c/listViews/My_Transport_Job.listView-meta.xml
<ListView>
    <fullName>My_Transport_Job</fullName>
    <columns>NAME</columns>
    <columns>Daily_Site_Job__c</columns>
    <columns>DSJS_Status__c</columns>
    <columns>Description__c</columns>
    <columns>Types__c</columns>
    <columns>Site__c</columns>
    <columns>Unit__c</columns>
    <columns>Status__c</columns>
    <columns>Billable__c</columns>
    <columns>Job_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </filters>
    <label>My Open Transport Jobs</label>
</ListView>