force-app/main/default/objects/Transport_Job__c/listViews/Nutri_Lick.listView-meta.xml
<ListView>
    <fullName>Nutri_Lick</fullName>
    <columns>NAME</columns>
    <columns>Job_Date__c</columns>
    <columns>Unit__c</columns>
    <columns>Description__c</columns>
    <columns>Site__c</columns>
    <columns>Billable__c</columns>
    <columns>Status__c</columns>
    <columns>Types__c</columns>
    <columns>Daily_Site_Job__c</columns>
    <columns>DSJS_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Site__c</field>
        <operation>contains</operation>
        <value>Nutri-Lick</value>
    </filters>
    <label>Nutri-Lick</label>
    <sharedTo>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>Transport</group>
    </sharedTo>
</ListView>