force-app/main/default/objects/Transport_Job__c/listViews/Rig_24.listView-meta.xml
<ListView>
    <fullName>Rig_24</fullName>
    <columns>NAME</columns>
    <columns>Job_Date__c</columns>
    <columns>Unit__c</columns>
    <columns>Description__c</columns>
    <columns>Site__c</columns>
    <columns>Billable__c</columns>
    <columns>Status__c</columns>
    <columns>Types__c</columns>
    <columns>Daily_Site_Job__c</columns>
    <columns>DSJS_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>Rig 24</value>
    </filters>
    <label>Rig 24</label>
    <sharedTo>
        <group>Managing_Director</group>
        <group>Rig_24</group>
        <group>Transport</group>
    </sharedTo>
</ListView>